@@ -1,5 +1,8 @@
 2007-04-24  Sven Neumann  <sven@gimp.org>
 
+	* app/config/Makefile.am: fiddle with test_config_LDFLAGS to make
+	test-config link again.
+
 	* plug-ins/common/wind.c: increased MAX_STRENGTH to 100.
 
 2007-04-24  Sven Neumann  <sven@gimp.org>
